# grav

./: README.md  db.sqlite3  ect good 505f91c47fa8e23e966113c79e15368343e51508  manage.py  pyproject.toml  requirements.txt  textplain.textconv=astextplain
grav/: asgi.py  settings.py  urls.py  wsgi.py
profileapp/: admin.py  apps.py  asgi.py  modeles.py  settings.py  signals.py  urls.py  views.py  wsgi.py
profileapp/migrations/: 0001_initial.py  0002_profile_profile_picture.py  0003_rename_profile_profileapp.py  0004_remove_profileapp_profile_picture_and_more.py
static/css/: header.css  home.css  index.css
staticfiles/css/: header.css  home.css  index.css  profile.css
templates/: edit_profile.html  home.html  index.html  login_page.html  profile.html  register_page.html
