[tool.poetry]
name = "grav_project"
version = "0.1.0"
description = ""
authors = ["Arhoujdam <sarhoujdam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = ">=5.1.6,<6.0.0"
pillow = ">=11.1.0,<12.0.0"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"